# salesforce-client

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_READY.md  DISCOVERABILITY_CHECKLIST.md  LICENSE-APACHE  LICENSE-MIT  MANUAL_PUSH_STEPS.md  PUSH_TO_GITHUB.sh  README.md  README_OLD.md  RELEASE_CHECKLIST.md  TRANSFORMATION.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: query_benchmark.rs
examples/: basic_query.rs  concurrent_queries.rs  error_handling.rs  relationships.rs  type_driven.rs
src/: auth.rs  cache.rs  crud.rs  error.rs  lib.rs  main.rs  pagination.rs  query_builder.rs  rate_limit.rs  retry.rs
